--- a/GaokaoCountdown/MainWindow.xaml
+++ b/GaokaoCountdown/MainWindow.xaml
@@ -9,13 +9,26 @@
         Background="Transparent"
         AllowsTransparency="True"
         Title="Gaokao Countdown"
-        ShowInTaskbar="False" Width="682.237" Height="362.172">
+        Loaded="Window_Loaded"
+        ShowInTaskbar="False" Width="684" Height="487">
+    <Window.ContextMenu>
+        <ContextMenu>
+            <MenuItem x:Name="MenuItem_Settings" Header="设置" Click="MenuItem_Settings_Click"/>
+            <Separator/>
+            <MenuItem x:Name="MenuItem_Close" Header="关闭" Click="MenuItem_Close_Click"/>
+
+        </ContextMenu>
+    </Window.ContextMenu>
     <Grid Margin="0,80,0,0" MouseLeftButtonDown="Grid_MouseLeftButtonDown" VerticalAlignment="Center">
-        <Canvas Grid.Row="0"  Margin="0,-395,0,0" HorizontalAlignment="Left" Width="656" RenderTransformOrigin="0.501,0.212">
-            <TextBlock Text="距2024高考" FontSize="60" Foreground="#DFD9D6"
-                   Canvas.Left="10" Canvas.Bottom="100" Canvas.Top="261" FontFamily="{StaticResource zihun59}" />
+        <Canvas Grid.Row="0"  Margin="0,-395,1,0" RenderTransformOrigin="0.501,0.212">
+            <TextBlock Text="距" FontSize="60" Foreground="#DFD9D6"
+                   Canvas.Left="11" Canvas.Bottom="100" Canvas.Top="261" FontFamily="{StaticResource zihun59}" />
+            <TextBlock x:Name="year" Text="2024" FontSize="60" Foreground="#DFD9D6"
+                   Canvas.Left="73" Canvas.Bottom="100" Canvas.Top="261" FontFamily="{StaticResource DIN1451}" />
+            <TextBlock Text="高考" FontSize="60" Foreground="#DFD9D6"
+                   Canvas.Left="204" Canvas.Bottom="100" Canvas.Top="261" FontFamily="{StaticResource zihun59}" />
             <TextBlock Text="还剩" FontSize="60" Foreground="#DFD9D6"
-                   Canvas.Left="200" Canvas.Bottom="100" Canvas.Top="331" FontFamily="{StaticResource zihun59}" />
+                   Canvas.Left="204" Canvas.Bottom="100" Canvas.Top="331" FontFamily="{StaticResource zihun59}" />
             <TextBlock x:Name="countdown" Text="365" FontSize="130" Foreground="#DA3838"
                    Canvas.Left="333" Canvas.Bottom="100" Canvas.Top="261" Height="136" Width="219" FontFamily="{StaticResource DIN1451}" />
             <TextBlock Text="天" FontSize="60" Foreground="#DFD9D6"
@@ -24,10 +37,10 @@
                 Canvas.Left="185" Canvas.Bottom="0" Canvas.Top="331">
             </Border>
             <TextBlock Text="NATIONAL COLLEGE ENTRANCE EXAMNATION"
-               FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="207" Canvas.Top="410" />
-            <TextBlock Text="IN " FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="208" Canvas.Top="432" />
-            <TextBlock x:Name="pCountdown" Text="365" FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="237" Canvas.Top="432" />
-            <TextBlock Text="DAYS" FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="280" Canvas.Top="432" />
+               FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="205" Canvas.Top="410" />
+            <TextBlock Text="IN " FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="205" Canvas.Top="432" />
+            <TextBlock x:Name="pCountdown" Text="365" FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="234" Canvas.Top="432" />
+            <TextBlock Text="DAYS" FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="276" Canvas.Top="432" />
 
         </Canvas>
     </Grid>
