--- a/GaokaoCountdown/App.xaml
+++ b/GaokaoCountdown/App.xaml
@@ -2,15 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GaokaoCountdown"
+             xmlns:hc="https://handyorg.github.io/handycontrol"
              StartupUri="MainWindow.xaml" Startup="Application_Startup">
     <Application.Resources>
-            <ResourceDictionary>
-                <ResourceDictionary.MergedDictionaries>
-                    <ResourceDictionary>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
                     <FontFamily x:Key="zihun59">pack://application:,,,/Resources/字魂59号-创粗黑字体.ttf#字魂59号-创粗黑</FontFamily>
                     <FontFamily x:Key="DIN1451">pack://application:,,,/Resources/DIN 1451 LT W06 Mittelschrift.ttf#DIN1451LTW06-Mittelschrift</FontFamily>
                 </ResourceDictionary>
-                </ResourceDictionary.MergedDictionaries>
-            </ResourceDictionary>
-        </Application.Resources>
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
