--- a/GaokaoCountdown/MainWindow.xaml
+++ b/GaokaoCountdown/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:hc="https://handyorg.github.io/handycontrol"
         mc:Ignorable="d"
         WindowStyle="None"
         ResizeMode="NoResize"
@@ -25,12 +26,12 @@
                    Canvas.Left="11" Canvas.Bottom="100" Canvas.Top="261" FontFamily="{StaticResource zihun59}" />
             <TextBlock x:Name="year" Text="2024" FontSize="60" Foreground="#DFD9D6"
                    Canvas.Left="73" Canvas.Bottom="100" Canvas.Top="261" FontFamily="{StaticResource DIN1451}" />
-            <TextBlock Text="高考" FontSize="60" Foreground="#DFD9D6"
+            <TextBlock x:Name="event" Text="高考" FontSize="60" Foreground="#DFD9D6"
                    Canvas.Left="204" Canvas.Bottom="100" Canvas.Top="261" FontFamily="{StaticResource zihun59}" />
             <TextBlock Text="还剩" FontSize="60" Foreground="#DFD9D6"
                    Canvas.Left="204" Canvas.Bottom="100" Canvas.Top="331" FontFamily="{StaticResource zihun59}" />
             <TextBlock x:Name="countdown" Text="365" FontSize="130" Foreground="#DA3838"
-                   Canvas.Left="333" Canvas.Bottom="100" Canvas.Top="261" Height="136" Width="219" FontFamily="{StaticResource DIN1451}" />
+                   Canvas.Left="329" Canvas.Bottom="100" Canvas.Top="261" Height="136" Width="228" FontFamily="{StaticResource DIN1451}" TextAlignment="Center" />
             <TextBlock Text="天" FontSize="60" Foreground="#DFD9D6"
                    Canvas.Left="562" Canvas.Bottom="100" Canvas.Top="331" RenderTransformOrigin="0.983,0.53" FontFamily="{StaticResource zihun59}" />
             <Border x:Name="LeftBorder" BorderThickness="10" BorderBrush="#DA3838" Width="7" Height="130"
@@ -39,7 +40,7 @@
             <TextBlock Text="NATIONAL COLLEGE ENTRANCE EXAMNATION"
                FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="205" Canvas.Top="410" />
             <TextBlock Text="IN " FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="205" Canvas.Top="432" />
-            <TextBlock x:Name="pCountdown" Text="365" FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="234" Canvas.Top="432" />
+            <TextBlock x:Name="pCountdown" Text="365" FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="233" Canvas.Top="432" TextAlignment="Center" Width="38" />
             <TextBlock Text="DAYS" FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="276" Canvas.Top="432" />
 
         </Canvas>
