--- a/SigmaCountdown/MainWindow.xaml
+++ b/SigmaCountdown/MainWindow.xaml
@@ -32,7 +32,7 @@
         <TextBlock x:Name="event_level" Text="还剩" FontSize="60" Foreground="#DFD9D6"
                    Canvas.Left="221" Canvas.Bottom="100" Canvas.Top="70" FontFamily="{StaticResource zihun59}" />
         <TextBlock x:Name="countdown" Text="365" FontSize="130" Foreground="#DA3838"
-                   Canvas.Left="344" Canvas.Bottom="100" Canvas.Top="0" Height="136" Width="auto" FontFamily="{StaticResource DIN1451}" TextAlignment="Center" />
+                   Canvas.Left="341" Canvas.Bottom="100" Canvas.Top="0" Height="136" Width="213" FontFamily="{StaticResource DIN1451}" TextAlignment="Right" />
         <TextBlock x:Name="decimalNum" Text=".555" FontSize="40" Foreground="#DA3838"
                    Canvas.Left="551" Canvas.Bottom="100" Canvas.Top="80" Height="51" Width="auto" FontFamily="{StaticResource DIN1451}" TextAlignment="Center" />
         <TextBlock Text="天" FontSize="60" Foreground="#DFD9D6"
