--- a/SigmaCountdown/MainWindow.xaml
+++ b/SigmaCountdown/MainWindow.xaml
@@ -6,11 +6,12 @@
         mc:Ignorable="d"
         WindowStyle="None"
         ResizeMode="NoResize"
+        SizeToContent="WidthAndHeight"
         Background="Transparent"
         AllowsTransparency="True"
         Title="Sigma Countdown"
         Loaded="Window_Loaded"
-        ShowInTaskbar="False" Height="213" Width="651.885" FontFamily="Segoe UI">
+        ShowInTaskbar="False" FontFamily="Segoe UI" VerticalContentAlignment="Center">
     <Window.ContextMenu>
         <ContextMenu>
             <MenuItem x:Name="MenuItem_Settings" Header="设置" Click="MenuItem_Settings_Click"/>
@@ -19,30 +20,26 @@
 
         </ContextMenu>
     </Window.ContextMenu>
-
-    <Canvas MouseLeftButtonDown="Canvas_MouseLeftButtonDown" Margin="-35,0,-18,-1" Height="204" VerticalAlignment="Bottom">
-
-        <TextBlock Text="距" FontSize="55" Foreground="#DFD9D6"
-                   Canvas.Left="28" Canvas.Bottom="100" Canvas.Top="5" FontFamily="字魂创粗黑" />
-        <TextBlock x:Name="year" Text="2024" FontSize="60" Foreground="#DFD9D6"
-                   Canvas.Left="90" Canvas.Bottom="100" Canvas.Top="10" FontFamily="{StaticResource DIN1451}" Height="66" />
-        <TextBlock x:Name="event" Text="高考" FontSize="55" Foreground="#DFD9D6"
-                   Canvas.Left="221" Canvas.Bottom="100" Canvas.Top="5" FontFamily="字魂创粗黑" />
-        <TextBlock x:Name="event_level" Text="还剩" FontSize="55" Foreground="#DFD9D6"
-                   Canvas.Left="221" Canvas.Bottom="100" Canvas.Top="70" FontFamily="字魂创粗黑" />
-        <TextBlock x:Name="countdown" Text="365" FontSize="130" Foreground="#DA3838"
-                   Canvas.Left="341" Canvas.Bottom="100" Canvas.Top="0" Height="136" Width="213" FontFamily="{StaticResource DIN1451}" TextAlignment="Right" />
-        <TextBlock x:Name="decimalNum" Text=".555" FontSize="40" Foreground="#DA3838"
-                   Canvas.Left="551" Canvas.Bottom="100" Canvas.Top="80" Height="51" Width="auto" FontFamily="{StaticResource DIN1451}" TextAlignment="Center" />
-        <TextBlock Text="天" FontSize="55" Foreground="#DFD9D6"
-                   Canvas.Left="623" Canvas.Bottom="100" Canvas.Top="70" RenderTransformOrigin="0.983,0.53" FontFamily="字魂创粗黑" />
-        <Border x:Name="LeftBorder" BorderThickness="10" BorderBrush="#DA3838" Width="8" Height="111"
-                Canvas.Left="206" Canvas.Bottom="0" Canvas.Top="77">
-        </Border>
-        <TextBlock x:Name="event_eng" Text="NATIONAL COLLEGE ENTRANCE EXAMINATION"
-               FontSize="20" Foreground="#DFD9D6" HorizontalAlignment="Center" Height="26" Canvas.Left="225" Canvas.Top="139" FontFamily="{StaticResource DIN1451}"/>
-        <TextBlock x:Name="pCountdown" Text="IN 365 DAYS" FontSize="20" Foreground="#DFD9D6" Height="26" Canvas.Left="226" Canvas.Top="163" Width="139" FontFamily="{StaticResource DIN1451}"/>
-    </Canvas>
-
-
+    <DockPanel LastChildFill="False">
+        <DockPanel LastChildFill="False" Height="159">
+            <TextBlock Text="距" FontSize="55" Foreground="#DFD9D6"
+                    FontFamily="字魂创粗黑" Margin="0,1,0,84"/>
+            <TextBlock x:Name="year" Text="2024" FontSize="60" Foreground="#DFD9D6"
+                    FontFamily="{StaticResource DIN1451}" Margin="0,6,0,84"/>
+            <Grid HorizontalAlignment="Center">
+                <Border x:Name="LeftBorder" BorderThickness="10" BorderBrush="#DA3838" Width="4" Margin="-4,75,128,29" />
+                <TextBlock x:Name="event" Text="高考" FontSize="55" Foreground="#DFD9D6"
+                    FontFamily="字魂创粗黑" VerticalAlignment="Bottom" Margin="0,0,0,95" />
+                <TextBlock x:Name="event_level" Text="还剩" FontSize="55" Foreground="#DFD9D6"
+                    FontFamily="字魂创粗黑" Margin="0,62,0,16" />
+            </Grid>
+        </DockPanel>
+        <DockPanel LastChildFill="False" Height="159">
+            <TextBlock x:Name="countdown" Text="365" FontSize="130" Foreground="#DA3838"
+                FontFamily="{StaticResource DIN1451}" TextAlignment="Left" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,8,0,15"/>
+            <TextBlock x:Name="decimalNum" Text=".555" FontSize="40" Foreground="#DA3838" FontFamily="{StaticResource DIN1451}" HorizontalAlignment="Left" TextAlignment="Left" Height="41" Margin="0,86,0,30"/>
+            <TextBlock Text="天" FontSize="55" Foreground="#DFD9D6"
+                RenderTransformOrigin="0.983,0.53" FontFamily="字魂创粗黑" Margin="0,73,0,-3" Width="58" />
+        </DockPanel>
+    </DockPanel>
 </Window>
