--- a/SigmaCountdown/MainWindow.xaml
+++ b/SigmaCountdown/MainWindow.xaml
@@ -21,26 +21,24 @@
         </ContextMenu>
     </Window.ContextMenu>
     <DockPanel LastChildFill="False">
-        <DockPanel LastChildFill="False" Height="155">
+        <DockPanel LastChildFill="False" Height="132">
             <TextBlock Text="距" FontSize="55" Foreground="#DFD9D6"
-                    FontFamily="字魂创粗黑" Margin="0,0,0,90"/>
-            <TextBlock x:Name="event_year" Text="2024" FontSize="60" Foreground="#DFD9D6"
-                    FontFamily="{StaticResource DIN1451}" Margin="0,6,0,84"/>
+                    FontFamily="字魂创粗黑" VerticalAlignment="Top"/>
+            <TextBlock x:Name="event_year" Text="2024" FontSize="55" Foreground="#DFD9D6"
+                    FontFamily="字魂创粗黑" VerticalAlignment="Top"/>
             <Grid>
                 <TextBlock x:Name="event" Text="高考" FontSize="55" Foreground="#DFD9D6"
-                    FontFamily="字魂创粗黑" VerticalAlignment="Bottom" Margin="0,0,0,89" />
-                <DockPanel LastChildFill="False" Margin="-6,69,0,0" HorizontalAlignment="Right">
-                    <Border x:Name="LeftBorder" BorderThickness="10" BorderBrush="#DA3838" Width="6" HorizontalAlignment="Right" Margin="0,10,0,22" RenderTransformOrigin="0.5,0.5" />
-                    <TextBlock x:Name="event_level" Text="还剩" FontSize="55" Foreground="#DFD9D6"
-                        FontFamily="字魂创粗黑" Margin="0,-4,0,0"/>
-
+                    FontFamily="字魂创粗黑" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+                <DockPanel HorizontalAlignment="Right" LastChildFill="False" VerticalAlignment="Bottom">
+                    <Border x:Name="LeftBorder" BorderThickness="10" BorderBrush="#DA3838" Width="6" Height="54" VerticalAlignment="Bottom" />
+                    <TextBlock x:Name="event_level" Text="还剩" FontSize="55" Foreground="#DFD9D6" FontFamily="字魂创粗黑"/>
                 </DockPanel>
             </Grid>
         </DockPanel>
-        <DockPanel LastChildFill="False" Height="155">
+        <DockPanel LastChildFill="False" Height="132">
             <TextBlock x:Name="countdown" Text="365" FontSize="130" Foreground="#DA3838"
-                FontFamily="{StaticResource DIN1451}" TextAlignment="Left" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,-1"/>
-            <TextBlock x:Name="decimalNum" Text=".555" FontSize="40" Foreground="#DA3838" FontFamily="{StaticResource DIN1451}" HorizontalAlignment="Left" TextAlignment="Left" Height="41" Margin="0,86,0,30"/>
+                FontFamily="{StaticResource DIN1451}" TextAlignment="Left"/>
+            <TextBlock x:Name="decimalNum" Text=".555" FontSize="40" Foreground="#DA3838" FontFamily="{StaticResource DIN1451}" TextAlignment="Left" Margin="0,87,0,0"/>
             <TextBlock Text="天" FontSize="55" Foreground="#DFD9D6"
                 RenderTransformOrigin="0.983,0.53" FontFamily="字魂创粗黑" Margin="0,70,0,0"/>
         </DockPanel>
